--- a/src/hero/hero.scss
+++ b/src/hero/hero.scss
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 100vh;
   background: #1e1e1e;
-  //   transition: all linear 0.225s;
+    // transition: all ease 0.125s;
   position: relative;
   &::before {
     // transition: all linear 0.225s;
@@ -19,10 +19,7 @@
     position: relative;
     z-index: 1;
     width: 100%;
-    padding: 204px 20px 205px 20px;
-    @media screen and (max-width: 1300px) {
-      padding: 124px 20px 125px 20px;
-    }
+    padding: 80px 20px 85px 20px;
     @media screen and (max-width: 768px) {
       padding: 74px 20px 75px 20px;
     }
@@ -46,37 +43,26 @@
       }
     }
     .title {
-      margin-top: 64px;
-      margin-bottom: 64px;
-      text-align: center;
-      font-family: "NeueMachina";
-      font-style: normal;
-      font-weight: 800;
-      font-size: 128px;
-      line-height: 124px;
-      text-align: center;
-      color: #51fc8f;
-      @media screen and (max-width: 1300px) {
-        font-size: 98px;
-        line-height: 94px;
-        margin-top: 54px;
-        margin-bottom: 54px;
+      margin-top: 44px;
+      margin-bottom: 44px;
+      display: flex;
+      justify-content: center;
+      img{
+        width: 600px;
+        height: auto;
       }
       @media screen and (max-width: 768px) {
-        font-size: 78px;
-        line-height: 74px;
         margin-top: 44px;
         margin-bottom: 44px;
+        img{
+          width: 100%;
+        }
       }
       @media screen and (max-width: 480px) {
-        font-size: 58px;
-        line-height: 54px;
         margin-top: 34px;
         margin-bottom: 34px;
       }
       @media screen and (max-width: 380px) {
-        font-size: 43px;
-        line-height: 44px;
       }
     }
     .description {
@@ -93,7 +79,7 @@
       }
     }
     form {
-      margin-top: 128px;
+      margin-top: 80px;
       display: flex;
       justify-content: center;
       @media screen and (max-width: 768px) {
@@ -105,7 +91,7 @@
         justify-content: center;
         position: relative;
         width: 643px;
-        height: 96px;
+        height: 66px;
         transition: all ease-in-out 0.225s;
         @media screen and (max-width: 768px) {
           width: 100%;
@@ -123,7 +109,7 @@
           box-sizing: border-box;
           padding: 0 0 0 23px;
           background: rgba(255, 255, 255, 0.05);
-          border-radius: 32px;
+          border-radius: 22px;
           border: none;
           &:focus-visible {
             outline: none;
@@ -135,15 +121,14 @@
           line-height: 100%;
           color: rgba(255, 255, 255, 0.6);
           @media screen and (max-width: 768px) {
-            border-radius: 27px;
             font-size: 20px;
           }
           @media screen and (max-width: 500px) {
             height: 66px;
           }
-           @media screen and (max-width:440px){
+          @media screen and (max-width: 440px) {
             font-size: 16px;
-           }
+          }
         }
         .btn {
           cursor: pointer;
@@ -152,7 +137,7 @@
           position: absolute;
           right: 0;
           bottom: 0;
-          border-radius: 32px;
+          border-radius: 22px;
           border: none;
           font-family: "Gordita Medium";
           font-style: normal;
@@ -161,17 +146,36 @@
           line-height: 100%;
           color: #000000;
           padding: 5px 10px;
-          //   transition: all linear 0.2s;
+            transition: all linear 0.2s;
           background: #fff;
           &:hover {
             box-shadow: rgba(200, 210, 220, 0.9) 0px 4px 12px;
           }
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .lds-dual-ring {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            &:after {
+              content: " ";
+         
+              margin-top: -3px;
+              display: block;
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              border: 4px solid #000;
+              border-color: #000 transparent #000 transparent;
+              animation: lds-dual-ring 1.2s linear infinite;
+            }
+          }
           @media screen and (max-width: 768px) {
             width: 160px;
-            border-radius: 27px;
             font-size: 20px;
           }
-          
+
           @media screen and (max-width: 500px) {
             height: 66px;
             width: 100%;
@@ -188,16 +192,15 @@
       }
       .inputActiv {
         @media screen and (max-width: 500px) {
-           height: 66px;
-         }
+          height: 66px;
+        }
         .btn {
           width: 100%;
           font-size: 22px;
           @media screen and (max-width: 768px) {
-            
             font-size: 20px;
           }
-           @media screen and (max-width: 440px) {
+          @media screen and (max-width: 440px) {
             font-size: 16px;
           }
         }
@@ -250,11 +253,25 @@
           &:hover {
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
           }
+           .lds-dual-ring {
+            &:after {
+              border: 4px solid #fff;
+              border-color: #fff transparent #fff transparent;
+            }
+          }
         }
       }
     }
     .notify {
       color: rgba(0, 0, 0, 0.5);
     }
+  }
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
