--- a/src/index.css
+++ b/src/index.css
@@ -12,24 +12,43 @@ code {
     monospace;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 
 @font-face {
   font-family: 'NeueMachina';
-    src: url('../src/asstes/family/NeueMachina-Regular.otf'); /* IE9 Compat Modes */
+    src: url('../src/asstes/family/NeueMachina-Regular.otf');
     font-weight: 800;
+    font-style: normal;
+}
+@font-face {
+  font-family: 'Gordita';
+    src: url('../src/asstes/family/Gordita-Regular.ttf'); 
+    font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
+  font-family: 'Gordita Medium';
+    src: url('../src/asstes/family/Gordita-Medium.ttf'); 
+    font-weight: 800;
+    font-style: normal;
+}
+
+
+/* @font-face {
   font-family: 'Gordita';
-    src: url('../src/asstes/family/Gordita.otf'); /* IE9 Compat Modes */
+    src: url('../src/asstes/family/Gordita.otf'); 
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
   font-family: 'Gordita Medium';
-    src: url('../src/asstes/family/Gordita\ Medium.otf'); /* IE9 Compat Modes */
+    src: url('../src/asstes/family/Gordita\ Medium.otf');
     font-weight: 500;
     font-style: normal;
-}
+} */
